[sun] 운영체제란

--- a/운영체제/운영체제란.md
+++ b/운영체제/운영체제란.md
@@ -57,3 +57,46 @@
 #### iPadOS
 - 2022.05.20 기준 15 최신 버전.
 - 기능은 iOS, MacOS와 비슷함.
+
+<br><br><br>
+
+> 선경
+
+### 운영체제란
+시스템을 쉽게 사용할 수 있도록 하는 소프트웨어다! 프로그램을 쉽게 실행하고, 프로그램 간의 메모리 공유, IO 장치들과 상호작용 등을 가능케 한다.
+
+시스템을 쉽게 사용할 수 있도록 하기 위해 운영체제는 가상화라는 기법을 사용한다. 즉, 물리적 자원인 CPU와 메모리를 가상화하여 개별 프로그램에게 나만의 CPU, 나만의 메모리가 있는 것과 같은 환상을 제공한다. 
+
+요컨대, 가상화는 여러 프로그램들이 CPU를 공유할 수 있도록 하여, 동시에 실행되는 것처럼 보이게 한다.
+
+또한 프로그램들이 디스크 등의 장치를 공유할 수 있게 한다. 
+
+마지막으로, 운영체제는 사용자 프로그램이 프로그램 실행, 메모리 할당, 파일 접근과 같은 기능들을 운영체제에게 요청할 수 있는 인터페이스(API)를 제공한다. 
+
+따라서 사용자는 현재 사용 가능한 CPU나 메모리가 있는 지 매번 체크할 필요 없이 그냥 프로그램을 실행시키기만 하면 된다...! 어쩔 CPU~ 어쩔 메모리~ 
+
+
+<br>
+
+**운영체제의 역할**
+>- CPU, 메모리, 디스크와 같은 물리 자원을 가상화한다
+>- 병행성과 관련된 문제들을 처리한다
+>- 파일을 영속적으로 저장한다
+
+<br>
+
+### 운영체제의 역사
+
+#### 초창기 운영체제: 단순 라이브러리
+- 초창기 운영체제는 자주 사용하는 함수들을 모아놓은 라이브러리
+  - e.g. 저수준 입출력 처리 코드
+- 작업들이 준비되면 컴퓨터 관리자(당시에는 진짜 사람)가 일괄적으로 처리(batch) 했음
+
+#### 라이브러리를 넘어서: 보호
+- 운영체제 코드는 하드웨어 장치의 제어를 담당하므로 일반적인 라이브러리 형태로 구현하면 보호 문제가 발생
+  - e.g. 어떤 프로그램이든 디스크의 원하는 위치를 읽을 수 있음 
+- 운영체제 코드 실행을 위해서는 특정 하드웨어 명령어와 상태를 결합해 사용자가 제어를 운영체제에게 넘기도록 발전
+
+#### 멀티프로그래밍 시대
+- 미니컴퓨터의 등장으로 컴퓨터 가격이 하락하면서 접근성이 높아짐
+- 컴퓨터 자원의 효율적인 활용을 위해 여러 작업을 메모리에 탑재하고 작업들을 빠르게 번갈아 가며 실행하도록 하여 CPU 사용률을 향상
