[2unbini] 프로세스 주소공간

--- a/운영체제/프로세스_주소공간.md
+++ b/운영체제/프로세스_주소공간.md
@@ -1,3 +1,42 @@
+# 프로세스 주소공간
+
+> 은빈
+
+### 프로세스 주소공간(Process Address Space)
+
+프로세스에 대한 설명 중, CPU가 프로세스를 번갈아가면서 실행하기 위해 문맥(Context)을 가지고 있어야 한다고 했다. 이 문맥 안에는 여러 가지 요소가 있지만, 그 중 프로세스의 주소 공간도 있다. 프로세스 실행하려면 그 주소를 따라가 프로세스에 대한 정보를 알아야 하니까. 그럼 프로세스의 주소공간은 어떤 영역으로 이루어져 있을까?
+
+### 프로세스 주소공간의 영역
+
+프로세스는 프로그램이 메모리 공간에 올라가 CPU의 부름을 받는 상태이다. 그 프로그램은 우리가 알다시피 컴퓨터 프로그래밍 언어로 변수, 상수, 함수 등 다양하게 작성되어 있다. 이를 CPU가 쭉 훑으면서 실행하게 되는 것이다. 결국, 프로세스 주소공간에는 개발자가 작성한 코드, 변수나 상수, 함수 등이 들어가 있게 된다.
+
+#### 코드 영역(Code)
+
+- 개발자가 작성한 그 소스코드가 저장되는 영역이다. `int main(void) { ... }`
+- 코드는 컴파일 시점에 메모리에 할당된다.
+- 코드는 프로그램이 실행되는 중간에 바뀌어선 안 되므로 읽기 전용이다.
+
+#### 데이터 영역(Data)
+- 전역변수, 정적(static)변수가 저장되는 영역이다.
+- 컴파일 시점에서 전역, 정적 변수가 데이터 영역에 할당되고, 프로그램이 종료될 때 해제된다.
+- 이것도 변수이므로 바뀔 수 있기 때문에 읽기/쓰기 모두 가능하다.
+- BSS(Block Stated Symbol)이라는 영역도 있는데, 변수가 초기화되지 않은 상태일 때 해당 영역에 할당되고, 변수가 초기화된 상태일 땐 데이터 영역에 할당된다.
+- 전역변수, 정적변수는 프로그램이 실행되는 동안 항상 어디서든 접근할 수 있어야 하기 때문에 따로 독자적인 영역을 두고 있다.
+
+#### 스택 영역(Stack)
+
+- 함수와 관련된 요소들(지역변수, 매개변수 등)이 저장되는 영역이다.
+- 함수가 호출되는 순간 Stack에 할당되고, 함수가 끝니면 해제된다.
+- 변수는 바뀔 수 있으므로 읽기/쓰기가 모두 가능하다.
+- 스택 영역에는 스택만 있는 것이 아니라, 런타임시에 메모리를 할당하는 동적 할당을 위한 자리인 힙(Heap)도 있다.
+	- 스택은 아래에서 위로, 힙은 위에서 아래로 쌓여간다.
+	- 재귀함수같은 녀석들이 스택 영역을 다 채우고 다른 영역까지 침범하는 상황을 Stack Overflow라고 한다.
+
+### 프로세스 주소공간을 이렇게 나눈 이유? (뇌피셜)
+
+메모리 사용량을 줄이기 위함일거라 생각한다. 같은 프로세스를 여러 개 실행중일 때, 코드 영역을 공유해 메모리 사용량을 줄일 수 있다. 그럼 스택과 데이터 영역은? 데이터 영역은 프로세스상에서 언제 어디서든 접근할 수 있는 것들을 따로 모아두기 위해 분리했다고 생각한다. 마지막으로, 함수의 실행과 종료 양상을 보면 함수가 먼저 실행됐다고 해서 먼저 종료되는 것이 아니다. 함수 A 안에 함수 B가 있는 구조라면, A가 시작되고, B가 시작되고, B가 끝나고, A가 끝나는 방식이다. 즉, 후입선출(LIFO) 구조로 함수의 할당이 진행되는 것을 알 수 있다. 후입선출 구조로 되어 있는 스택이 함수와 관련된 영역에 제격이기 때문에 스택 영역을 따로 만들어 함수와 관련된 것들만을 관리할 수 있게 분리했다고 생각한다. 
+
+
 > 선경
 
 ### 주소공간
