--- a/운영체제/시스템콜.md
+++ b/운영체제/시스템콜.md
@@ -1,3 +1,17 @@
+# 시스템 콜
+
+> 은빈
+
+### 시스템 콜(System Call)
+
+운영체제는 하드웨어와 가까운 커널 모드(Kernel Mode)와 사용자와 가까운 사용자 모드(User Mode)로 나누어져 있다.
+
+각 모드에서 할 수 있는 일이 구분되어 있는데, 커널 모드에서는 운영체제가 하는 역할(CPU 스케줄링, 메모리 및 파일 관리 등)이 가능하다. 사용자 모드에서는 프로그램단에서 가능한 작업들을 할 수 있다. 즉, 사용자 모드에서는 커널 모드가 할 수 있는 작업을 하지 못한다.
+
+그런 프로세스가 운영체제의 기능을 필요로 할 때가 있는데, 이 때 그 기능을 할 수 있게 운영체제에게 알리는 것이 바로 '시스템 콜(System Call)'이다. 대개 파일을 열고 닫고, 프로세스를 복제하거나 다른 프로그램으로 바꾸는 등 프로세스 내부적으로 가능하지 않은, 운영체제가 관리하고 있는 기능들에 접근할 떄 시스템 콜을 하게 된다.
+
+<br><br><br>
+
 > 선경
 
 ### 시스템 콜
