--- a/운영체제/시스템콜.md
+++ b/운영체제/시스템콜.md
@@ -10,6 +10,8 @@
 
 그런 프로세스가 운영체제의 기능을 필요로 할 때가 있는데, 이 때 그 기능을 할 수 있게 운영체제에게 알리는 것이 바로 '시스템 콜(System Call)'이다. 대개 파일을 열고 닫고, 프로세스를 복제하거나 다른 프로그램으로 바꾸는 등 프로세스 내부적으로 가능하지 않은, 운영체제가 관리하고 있는 기능들에 접근할 떄 시스템 콜을 하게 된다.
 
+위의 예시로 든 것들 뿐만 아니라, I/O, 즉 사용자 프로그램에서 입출력이 발생할 때도 시스템 콜이 발생한다. I/O는 그냥 프로그램의 일부같은데 왜 시스템 콜이 발생할까? 운영체제는 말 그대로 실행되고 있는 모든 프로세스와 들어오고 나가는 모든 I/O에 대해 적절하게 자원을 분배해주는 '대표'다. 프로세스가 실행되는 도중 I/O 요청이 들어오면 CPU가 그냥 넋 놓고 어~ 하고 있는 게 아니라, 운영체제에 의해 I/O를 처리하기도 한다. 프로세스가 I/O 요청을 지금 당장 필요로 한다고 했을 때, CPU가 그 I/O 요청을 받아와야 하므로 프로세스는 그 시점에서 시스템 콜을 할 수 있다.
+
 <br><br><br>
 
 > 선경
