--- a/운영체제/인터럽트.md
+++ b/운영체제/인터럽트.md
@@ -1,3 +1,35 @@
+# 인터럽트(Interrupt)
+
+> 은빈
+
+### 인터럽트
+
+시스템 콜에서 프로세스가 I/O 요청을 할 때 운영체제에 시스템 콜을 걸어 I/O 요청을 바로 받아올 수 있도록 한다고 했다. 이 때 운영체제가 A 프로세스도 B 프로세스도 아닌 I/O 처리를 바로 하도록 현재 진행중인 프로세스 및 작업들을 중단시킨다. 이 것이 바로 인터럽트.
+
+### 인터럽트의 종류
+
+#### 하드웨어 인터럽트
+
+위에서 말한 I/O와 같이 하드웨어가 발생시킨 인터럽트를 하드웨어 인터럽트라고 한다. 운영체제에서 '인터럽트'라고 하면 이 하드웨어 인터럽트를 생각하면 된다.
+
+I/O 말고 Timer 라는 것도 하드웨어 인터럽트에 속하는데, 이 Timer는 특정 프로그램이 CPU를 독점해 사용하는 것을 막기 위해 고안된 장치다. CPU를 사용한 지 특정한 시간이 지나면 CPU에 대한 제어권을 운영체제에게 넘기도록 되어 있다.
+
+**입출력의 종류**
+- 동기식 입출력(synchronous I/O)
+	- I/O가 동기적으로 실행된다. 즉, 입출력 작업이 완료돼야 사용자 프로그램으로 제어권이 넘어가는 것.
+- 비동기식 입출력(asynchronous I/O)
+	- I/O가 비동기적으로 실행된다. 즉, 입출력 작업의 완료 여부와 관계 없이 제어권이 사용자 프로그램으로 바로 넘어가는 것.
+동기식, 비동기식 입출력 모두 I/O가 시작되고 끝남을 인터럽트를 통해 알려 준다.
+
+#### 소프트웨어 인터럽트
+
+소프트웨어 인터럽트는 단순히 인터럽트라고 하지 않고 '트랩'이라는 별칭으로 불린다.
+
+트랩에는 프로그램이 오류를 범한 경우와, 프로세스가 커널 함수를 호출한 경우 등이 있다. 전자를 Exception이라 하고, 후자는 우리가 알고 있는 System Call이다.
+
+
+<br><br><br>
+
 > 선경
 
 ### 인터럽트
